--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="logo_image">
-            <img src="../imgs/logo1.png">
+            <img src="./imgs/logo1.png">
         </div>
         <div class="row">
             <div class="col-1"></div>
@@ -52,7 +52,7 @@
 
             <div class="col-5">
                 <div class=" sub_content2">
-                   <img src="../imgs/logo1.png" class="logo_image1">
+                   <img src="./imgs/logo1.png" class="logo_image1">
                    <p class="pg4">HIKE MORE</p>
                    <p class="pg5">---Worry Less---</p>
                    <p class="pg2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum nemo eos debitis. Soluta, dicta repellendus tempora ex aut eos tempore sunt, laborum nostrum iste, itaque veniam saepe ipsa consectetur quae!</p>
@@ -124,6 +124,7 @@
                   </div>
                 </div>
             </div>
+
         </div>
     </div>
     
